# idutils

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: docs.yml  pypi-publish.yml
docs/: api.md  changelog.md  conf.py  contributing.md  custom-schemes.md  index.md  index.rst
idutils/: __init__.py  detectors.py  ext.py  normalizers.py  proxies.py  schemes.py  utils.py  validators.py
tests/: conftest.py  test_custom_scheme_registry.py  test_idutils.py
tests/mock_module/: custom_schemes.py  filters.py  normalizers.py
