# SPDX-FileCopyrightText: 2016 CERN.
# SPDX-FileCopyrightText: 2022 Graz University of Technology.
# SPDX-License-Identifier: BSD-3-Clause
#
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as an Intergovernmental Organization
# or submit itself to any jurisdiction.

[metadata]
name = idutils
version = attr: idutils.__version__
description = "Small library for persistent identifiers used in scholarly communication."
long_description = file: README.rst, CHANGES.rst
keywords = persistent identifiers
license = Revised BSD License
author = Invenio Software
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/idutils
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    isbnlib2>=3.11.7

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-cache>=1.0
    pytest-invenio>=1.4.0  # required for fixtures
    pytest-runner>=2.6.2
docs =
    zensical

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-modules --cov=idutils --cov-report=term-missing
testpaths = tests idutils
